
* Support for next generation networking cloud added, including the following features:
  - `networks` commands
  - `routers` commands
  - `ports` commands
  - `subnets` commands
* Support for load balancer as a service (LBaaS) with the `lb` commands

###Known Issues###

* The `--bootable option` has been removed from the `volumes` (list) command
* The v3 identity servers are not supported by this release

##Release 1.9.0 Features##

The 1.9.0 release is available for download from [https://docs.hpcloud.com/file/hpcloud-1.9.0.gem](/file/hpcloud-1.9.0.gem).  This release was made available on 5/15/2013 and contains the following new features:

* Support for domain name service (DNS)
* New `account:catalog` command dumps the service catalog for the given account
* Default availability zone is now the alphabetically-first zone in the service catalog.

###Known Issues###

* Support for availability zones in the `config.yml` file is deprecated.  Support for that future will be removed in the future.  There are no longer any hard-coded default zones in the configuration.

##Release 1.8.0 Features##

The 1.8.0 release is available for download from [https://docs.hpcloud.com/file/hpcloud-1.8.0.gem](/file/hpcloud-1.8.0.gem).  This release was made available on 4/15/2013 and contains the following new features:

* Support for the `after` and `at` options for the `remove` command added

###Known Issues###

* None for this release.


##Release 1.7.0 Features##

The 1.7.0 release is available for download from https://docs.hpcloud.com/file/hpcloud-1.7.0.gem.  This release was made available on 3/1/2013 and contains the following new features:

* Support for large file uploads greater than 5 gigabytes added
* Option `-r` (retry) to `copy` command for large file uploads added
* Option `-c` option added to most reports so you can specify the columns they want to see
* Option `-d` option added to most reports so you can specify the column delimiter for reports